2011-06-27  Alexis Menard  <alexis.menard@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove Phonon MediaPlayer from the tree.
        https://bugs.webkit.org/show_bug.cgi?id=63448

        Remvove from the build.

        * Source/WebKit.pri:

2011-06-24  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        Convert shadow DOM-related tests to use window.internals
        https://bugs.webkit.org/show_bug.cgi?id=61671

        * Source/autotools/symbols.filter: Export symbols for GTK.

2011-06-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Add more debug options to compilation
        https://bugs.webkit.org/show_bug.cgi?id=63318

        Add --enable-debug-symbols to enable/disable compilation with
        debug symbols and --enable-debug-features to enable/disable debug
        features. Both options are unconditionally enabled for debug
        builds.

        * configure.ac:

2011-06-23  Oliver Hunt  <oliver@apple.com>

        Qt build-fix: remove warning that no other platform appears to use.
        Someone can add it back if they really feel it's needed.

        * Source/WebKit.pri:

2011-06-22  Ryuan Choi  <ryuan.choi@samsung.com>

        Reviewed by Antonio Gomes.

        [EFL] Add an option to enable Device Orientation Event.
        https://bugs.webkit.org/show_bug.cgi?id=63120

        ADD ENABLE_DEVICE_ORIENTATION.

        * Source/cmake/OptionsEfl.cmake:
        * Source/cmakeconfig.h.cmake:

2011-06-22  Nate Chapin  <japhet@chromium.org>

        Reviewed by Adam Barth.

        Add symbols required for window.internals.
        https://bugs.webkit.org/show_bug.cgi?id=62066

        * Source/autotools/symbols.filter:

2011-06-22  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Adam Roben.

        [GTK] Implement pixel dump support for WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=58242
